--- a/src/M13n/App_GlobalResources/ValidationMessages.en.resx
+++ b/src/M13n/App_GlobalResources/ValidationMessages.en.resx
@@ -117,16 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="About" xml:space="preserve">
-    <value>About</value>
+  <data name="FieldMustBeDate" xml:space="preserve">
+    <value>The field '{0}' must be a date.</value>
+    <comment>ClientDataTypeModelValidatorProvider</comment>
   </data>
-  <data name="Contact" xml:space="preserve">
-    <value>Contact</value>
+  <data name="FieldMustBeNumeric" xml:space="preserve">
+    <value>The field '{0}' must be a number.</value>
+    <comment>ClientDataTypeModelValidatorProvider</comment>
   </data>
-  <data name="Home" xml:space="preserve">
-    <value>Home</value>
+  <data name="PropertyValueInvalid" xml:space="preserve">
+    <value>The value '{0}' is not valid for '{1}'.</value>
+    <comment>DefaultModelBinder</comment>
   </data>
-  <data name="Title" xml:space="preserve">
-    <value>M13n (MvcLocalization)</value>
+  <data name="PropertyValueRequired" xml:space="preserve">
+    <value>The field '{0}' is required.</value>
+    <comment>DefaultModelBinder</comment>
   </data>
 </root>
