--- a/src/M13n/Resources/ValidationErrors.en.resx
+++ b/src/M13n/Resources/ValidationErrors.en.resx
@@ -117,37 +117,46 @@
 	<resheader name="writer">
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
-	<data name="Home_FeatureText" xml:space="preserve">
-    <value>&lt;Español&gt;This prototype is mainly the sum of numerous blog posts and personal experimentations.  I want to test also some theories about implicit and explicit (and sessionless) localization.  More details can be found on the 'About' page.&lt;/Español&gt;</value>
+	<data name="Compare" xml:space="preserve">
+    <value>'{0}' and '{1}' do not match.</value>
   </data>
-	<data name="Home_Welcome" xml:space="preserve">
-    <value>Bienvenido a la M13N prototipo!</value>
+	<data name="CustomValidation" xml:space="preserve">
+    <value>'{0}' is not valid.</value>
   </data>
-	<data name="Contact_MessageLabel" xml:space="preserve">
-		<value>Mensaje</value>
-	</data>
-	<data name="Contact_NameLabel" xml:space="preserve">
-		<value>Nombre completo</value>
-	</data>
-	<data name="Contact_SendButtonLabel" xml:space="preserve">
-		<value>Enviar</value>
-	</data>
-	<data name="Contact_SubjectLabel" xml:space="preserve">
-		<value>Sujeto</value>
-	</data>
-	<data name="Contact_PageSubTitle" xml:space="preserve">
-		<value>Enviar un mensaje nada</value>
-	</data>
-	<data name="Contact_Title" xml:space="preserve">
-		<value>Contacto</value>
-	</data>
-	<data name="Contact_ValidationSummary" xml:space="preserve">
-		<value>No es posible el envío de este mensaje. Por favor, corrija los errores e inténtelo de nuevo.</value>
-	</data>
-	<data name="Contact_EmailLabel" xml:space="preserve">
-		<value>Email</value>
-	</data>
-	<data name="About_Title" xml:space="preserve">
-		<value>Acerca de este prototipo</value>
-	</data>
+	<data name="EmailAddress" xml:space="preserve">
+    <value>The field '{0}' is not a valid email address.</value>
+  </data>
+	<data name="FileExtensions" xml:space="preserve">
+    <value>The '{0}' field only accepts files with the following extensions: {1}</value>
+  </data>
+	<data name="MaxLength" xml:space="preserve">
+    <value>The field '{0}' must be a string or array type with a maximum length of '{1}'.</value>
+  </data>
+	<data name="MinLength" xml:space="preserve">
+    <value>The field '{0}' must be a string or array type with a minimum length of '{1}'.</value>
+  </data>
+	<data name="Phone" xml:space="preserve">
+    <value>The '{0}' field is not a valid phone number.</value>
+  </data>
+	<data name="Range" xml:space="preserve">
+    <value>The field '{0}' must be between '{1}' and '{2}'.</value>
+  </data>
+	<data name="Regex" xml:space="preserve">
+    <value>The field '{0}' must match the regular expression '{1}'.</value>
+  </data>
+	<data name="Required" xml:space="preserve">
+    <value>The '{0}' field is required.</value>
+  </data>
+	<data name="StringLength" xml:space="preserve">
+    <value>The field '{0}' must be a string with a maximum length of '{1}'.</value>
+  </data>
+	<data name="StringLengthIncludingMinimum" xml:space="preserve">
+    <value>The field '{0}' must be a string with a minimum length of '{2}' and a maximum length of '{1}'.</value>
+  </data>
+	<data name="Url" xml:space="preserve">
+    <value>The '{0}' field is not a valid fully-qualified http, https, or ftp URL.</value>
+  </data>
+	<data name="Validation" xml:space="preserve">
+    <value>The field '{0}' is invalid.</value>
+  </data>
 </root>
