--- a/src/M13n/Resources/ValidationErrors.es.resx
+++ b/src/M13n/Resources/ValidationErrors.es.resx
@@ -117,37 +117,46 @@
 	<resheader name="writer">
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
-	<data name="Home_FeatureText" xml:space="preserve">
-    <value>&lt;Español&gt;This prototype is mainly the sum of numerous blog posts and personal experimentations.  I want to test also some theories about implicit and explicit (and sessionless) localization.  More details can be found on the 'About' page.&lt;/Español&gt;</value>
+	<data name="Compare" xml:space="preserve">
+    <value>'{0}' e '{1}' no coinciden.</value>
   </data>
-	<data name="Home_Welcome" xml:space="preserve">
-    <value>Bienvenido a la M13N prototipo!</value>
+	<data name="CustomValidation" xml:space="preserve">
+    <value>'{0}' no es válido.</value>
   </data>
-	<data name="Contact_MessageLabel" xml:space="preserve">
-		<value>Mensaje</value>
-	</data>
-	<data name="Contact_NameLabel" xml:space="preserve">
-		<value>Nombre completo</value>
-	</data>
-	<data name="Contact_SendButtonLabel" xml:space="preserve">
-		<value>Enviar</value>
-	</data>
-	<data name="Contact_SubjectLabel" xml:space="preserve">
-		<value>Sujeto</value>
-	</data>
-	<data name="Contact_PageSubTitle" xml:space="preserve">
-		<value>Enviar un mensaje nada</value>
-	</data>
-	<data name="Contact_Title" xml:space="preserve">
-		<value>Contacto</value>
-	</data>
-	<data name="Contact_ValidationSummary" xml:space="preserve">
-		<value>No es posible el envío de este mensaje. Por favor, corrija los errores e inténtelo de nuevo.</value>
-	</data>
-	<data name="Contact_EmailLabel" xml:space="preserve">
-		<value>Email</value>
-	</data>
-	<data name="About_Title" xml:space="preserve">
-		<value>Acerca de este prototipo</value>
-	</data>
+	<data name="EmailAddress" xml:space="preserve">
+    <value>El campo '{0}' no es una dirección válida de correo electrónico.</value>
+  </data>
+	<data name="FileExtensions" xml:space="preserve">
+    <value>El campo '{0}' sólo acepta archivos con las siguientes extensiones: {1}</value>
+  </data>
+	<data name="MaxLength" xml:space="preserve">
+    <value>El campo '{0}' debe ser una cadena con una longitud máxima de '{1}'.</value>
+  </data>
+	<data name="MinLength" xml:space="preserve">
+    <value>El campo '{0}' debe ser una cadena con una longitud mínima de '{1}'.</value>
+  </data>
+	<data name="Phone" xml:space="preserve">
+    <value>El campo '{0}' no es un número de teléfono válido.</value>
+  </data>
+	<data name="Range" xml:space="preserve">
+    <value>El campo '{0}' debe estar entre '{1}' y '{2}'.</value>
+  </data>
+	<data name="Regex" xml:space="preserve">
+    <value>El campo '{0}' debe coincidir con la expresión regular '{1}'</value>
+  </data>
+	<data name="Required" xml:space="preserve">
+    <value>El campo '{0}' es obligatorio.</value>
+  </data>
+	<data name="StringLength" xml:space="preserve">
+    <value>El campo '{0}' debe ser una cadena con una longitud máxima de '{1}'.</value>
+  </data>
+	<data name="StringLengthIncludingMinimum" xml:space="preserve">
+    <value>El campo '{0}' debe ser una cadena con una longitud mínima de '{2}' y máxima de '{1}'.</value>
+  </data>
+	<data name="Url" xml:space="preserve">
+    <value>El campo '{0}' no es una URL HTTP, HTTPS o FTP completa válida.</value>
+  </data>
+	<data name="Validation" xml:space="preserve">
+    <value>El campo '{0}' no es válido.</value>
+  </data>
 </root>
