--- a/src/M13n/Resources/ValidationErrors.resx
+++ b/src/M13n/Resources/ValidationErrors.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,25 +117,46 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="About" xml:space="preserve">
-    <value>About</value>
+  <data name="Compare" xml:space="preserve">
+    <value>'{0}' and '{1}' do not match.</value>
   </data>
-  <data name="Contact" xml:space="preserve">
-    <value>Contact</value>
+  <data name="CustomValidation" xml:space="preserve">
+    <value>'{0}' is not valid.</value>
   </data>
-  <data name="EmailField" xml:space="preserve">
-    <value>The field '{0}' must be a valid email address.</value>
+  <data name="EmailAddress" xml:space="preserve">
+    <value>The field '{0}' is not a valid email address.</value>
   </data>
-  <data name="Home" xml:space="preserve">
-    <value>Home</value>
+  <data name="FileExtensions" xml:space="preserve">
+    <value>The '{0}' field only accepts files with the following extensions: {1}</value>
   </data>
-  <data name="MaxLengthField" xml:space="preserve">
-    <value>The field '{0}' must be at most {1} characters long.</value>
+  <data name="MaxLength" xml:space="preserve">
+    <value>The field '{0}' must be a string or array type with a maximum length of '{1}'.</value>
   </data>
-  <data name="RequiredField" xml:space="preserve">
-    <value>The field '{0}' is required</value>
+  <data name="MinLength" xml:space="preserve">
+    <value>The field '{0}' must be a string or array type with a minimum length of '{1}'.</value>
   </data>
-  <data name="Title" xml:space="preserve">
-    <value>M13n (MvcLocalization)</value>
+  <data name="Phone" xml:space="preserve">
+    <value>The '{0}' field is not a valid phone number.</value>
+  </data>
+  <data name="Range" xml:space="preserve">
+    <value>The field '{0}' must be between '{1}' and '{2}'.</value>
+  </data>
+  <data name="Regex" xml:space="preserve">
+    <value>The field '{0}' must match the regular expression '{1}'.</value>
+  </data>
+  <data name="Required" xml:space="preserve">
+    <value>The '{0}' field is required.</value>
+  </data>
+  <data name="StringLength" xml:space="preserve">
+    <value>The field '{0}' must be a string with a maximum length of '{1}'.</value>
+  </data>
+  <data name="StringLengthIncludingMinimum" xml:space="preserve">
+    <value>The field '{0}' must be a string with a minimum length of '{2}' and a maximum length of '{1}'.</value>
+  </data>
+  <data name="Url" xml:space="preserve">
+    <value>The '{0}' field is not a valid fully-qualified http, https, or ftp URL.</value>
+  </data>
+  <data name="Validation" xml:space="preserve">
+    <value>The field '{0}' is invalid.</value>
   </data>
 </root>
