--- a/src/M13n/Resources/Views/HomeStrings.resx
+++ b/src/M13n/Resources/Views/HomeStrings.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,34 +117,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ContactFormEmailLabel" xml:space="preserve">
+  <data name="Contact_EmailLabel" xml:space="preserve">
     <value>Email</value>
   </data>
-  <data name="ContactFormMessageLabel" xml:space="preserve">
+  <data name="Contact_MessageLabel" xml:space="preserve">
     <value>Your Message</value>
   </data>
-  <data name="ContactFormNameLabel" xml:space="preserve">
+  <data name="Contact_NameLabel" xml:space="preserve">
     <value>Full Name</value>
   </data>
-  <data name="ContactFormSendButtonLabel" xml:space="preserve">
+  <data name="Contact_SendButtonLabel" xml:space="preserve">
     <value>Send</value>
   </data>
-  <data name="ContactFormSubjectLabel" xml:space="preserve">
+  <data name="Contact_SubjectLabel" xml:space="preserve">
     <value>Subject</value>
   </data>
-  <data name="ContactPageSubTitle" xml:space="preserve">
+  <data name="Contact_PageSubTitle" xml:space="preserve">
     <value>Send a message into the void</value>
   </data>
-  <data name="ContactTitle" xml:space="preserve">
+  <data name="Contact_Title" xml:space="preserve">
     <value>Contact</value>
   </data>
-  <data name="ContactValidationSummary" xml:space="preserve">
+  <data name="Contact_ValidationSummary" xml:space="preserve">
     <value>Unable to send this message.  Please correct the errors and try again.</value>
   </data>
-  <data name="FeatureText" xml:space="preserve">
-    <value>This prototype is mainly based on two blog posts by Alex Adamyan and some of the comments.  (http://adamyan.blogspot.ca/2010/02/aspnet-mvc-2-localization-complete.html &amp; http://adamyan.blogspot.ca/2010/07/addition-to-aspnet-mvc-localization.html)</value>
+  <data name="Home_FeatureText" xml:space="preserve">
+    <value>This prototype is mainly the sum of numerous blog posts and personal experimentations.  I want to test also some theories about implicit and explicit (and sessionless) localization.  More details can be found on the 'About' page.</value>
   </data>
-  <data name="Welcome" xml:space="preserve">
-    <value>Welcome to the M13n (MvcLocalization) prototype!</value>
+  <data name="Home_Welcome" xml:space="preserve">
+    <value>Welcome to the M13n prototype!</value>
+  </data>
+  <data name="About_Title" xml:space="preserve">
+    <value>About This Prototype</value>
   </data>
 </root>
