--- a/src/M13n/Resources/Areas/Admin/Views/DashboardStrings.resx
+++ b/src/M13n/Resources/Areas/Admin/Views/DashboardStrings.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,22 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="About" xml:space="preserve">
-    <value>About</value>
+  <data name="Dashboard_FeatureText" xml:space="preserve">
+    <value>This is the application dashboard, in a real web application we might expect metrics and other data in this page...</value>
   </data>
-  <data name="Contact" xml:space="preserve">
-    <value>Contact</value>
-  </data>
-  <data name="CultureCode" xml:space="preserve">
-    <value>en</value>
-  </data>
-  <data name="Home" xml:space="preserve">
-    <value>Home</value>
-  </data>
-  <data name="Manage" xml:space="preserve">
-    <value>Manage Website</value>
-  </data>
-  <data name="Title" xml:space="preserve">
-    <value>M13n (MvcLocalization)</value>
+  <data name="Dashboard_Title" xml:space="preserve">
+    <value>App Dashboard</value>
   </data>
 </root>
